2003-08-18  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Made bitfield a distinct type from bit so that bitfields
	convert as per ANSI C and bits retain their traditional
	boolean style behaviour. Implemented bitfield support in
	the z80 port.

	* src/SDCCsymt.h,
	* src/SDCCsymt.c,
	* src/SDCCast.c,
	* src/cdbFile.c,
	* src/mcs51/gen.c,
	* src/ds390/gen.c: bit v bitfield split
	* src/z80/gen.c: New support for bitfields
	* support/regression/tests/bitfields.c: reenabled z80,
	added more tests

2003-08-17  Frieder Ferlemann <Frieder.Ferlemann@web.de>

	Rules 246.x, 247.x relate to bitfields, the others speed up
	access to xdata mapped I/O devices.

	* src/mcs51/peeph.def: added 26 peepholes 246.x - 248.x, 180.x 

2003-08-16  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Cleaned up genPackBits and genUnpackBits and added two helper
	functions, emitPtrByteGet & emitPtrByteSet. Added optimizations
	for literal assignments in genPackBits (thanks to Frieder for
	reminding me).

	* src/mcs51/gen.c
	* src/ds390/gen.c

2003-08-16  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Fixed bug #748310 (pointer to function type mishandled when the
	function name is omitted). Also fixed a SIGSEGV when a function
	attribute (reentrant, etc) is used on a non-function or on a
	function but misplaced before the parameter list.

	* src/SDCC.y (abstract_declarator, abstract_declaractor2): fixed
	bug #748310
	* src/SDCC.y (declarator2_function_attributes): avoided SIGSEGV
	* support/Util/SDCCerr.h,
	* support/Util/SDCCerr.c: Added func attr misuse error msg

2003-08-13  Bernhard Held <bernhard@bernhardheld.de>

	Fixed bug #787649 by anonymous
	* src/SDCCglue.c (emitRegularMap): added emission of sloc for func ptr
	* src/ds390/gen.c (aopForSym): fixed func ptr in sloc

2003-08-14  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Fixed numerous bitfield problems.

	* src/SDCC.y: More bitfield related error checking
	* src/SDCCsymt.h,