@@ -1,5 +1,9 @@
 2003-08-18  Erik Petrich <epetrich@ivorytower.norman.ok.us>
 
+	* src/z80/gen.c (isUnsplitable, fetchPairLog): fixed bug #770454
+
+2003-08-18  Erik Petrich <epetrich@ivorytower.norman.ok.us>
+
 	Made bitfield a distinct type from bit so that bitfields
 	convert as per ANSI C and bits retain their traditional
 	boolean style behaviour. Implemented bitfield support in
